# service

./: .gitignore  README.md
.github/workflows/: main.yml
agent-webcam-stream/: app.py  pyproject.toml
agent-webcam-stream/src/: cam_stream.py
common/service-config-manager/: app.py
fastapi-collection-manager/: Dockerfile  README.md  app.py  pyproject.toml
fastapi-collection-manager/src/routes/: collection_routes.py
fastapi-images-manager/: Dockerfile  README.md  app.py  main.py  pyproject.toml
fastapi-images-manager/routers/: html_router.py  img_streaming_router.py
fastapi-images-manager/templates/: img_list_table.html  list_table.html  main.html  streaming.html  video_streaming.html
fastapi-img-process-manager/: README.md  app.py  pyproject.toml
fastapi-img-process-manager/src/routes/: collection_routes.py  collection_routes_model.py  collection_routes_utils.py
fastapi-user-manager/: Dockerfile  README.md  app.py  pyproject.toml
fastapi-user-manager/routers/table/: auth.py  database.py  dependencies.py  models.py  schemas.py  table_router.py
grpc-collection-manager/: README.md  app.py  pyproject.toml
grpc-collection-manager/src/: colletion_server.py
grpc-config-fetcher/: README.md  app.py  pyproject.toml
grpc-config-server/: app.py
kafka-changestream-consumer/: README.md  app.py  pyproject.toml
kafka-changestream-consumer/src/handler/: images_event_handler.py
kafka-changestream-producer/: Dockerfile  README.md  app.py  pyproject.toml
kafka-consumer-model/: Dockerfile  README.md  app.py  pyproject.toml
kafka-consumer-parquet/: README.md  app.py  pyproject.toml
kafka-image-consumer/: Dockerfile  README.md  app.py  pyproject.toml
kafka-image-consumer/src/: grid_fs_control.py
kafka-image-producer/: Dockerfile  README.md  app.py  pyproject.toml
message/queue-kafka-consumer/: app.py
mongo-collection-watcher/: README.md  app.py  pyproject.toml
queue-kafka-consumer/: Dockerfile  app.py  pyproject.toml
queue-kafka-producer/: Dockerfile  app.py  pyproject.toml
redis-webcam-producer/: Dockerfile  README.md  app.py  pyproject.toml
redis-webcam-producer/src/: cam_stream.py
service-collection-manager/: README.md  app.py  pyproject.toml
service-collection-manager/src/: colletion_server.py
service-config-manager/: Dockerfile  app.py  pyproject.toml
spark-image-consumer/: Dockerfile  README.md  app.py  pyproject.toml
spark-image-consumer/src/: spark_app.py
