[tool.poetry]
name = "agent-webcam-stream"
version = "0.1.0"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"

config_module = {path="../../common/config_module/dist/config_module-0.1.0-py3-none-any.whl"}
redis_module = {path="../../common/redis_module/dist/redis_module-0.1.1-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
