[tool.poetry]
name = "fastapi-img-process-manager"
version = "0.1.1-beta"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
utils_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "utils_module" }
config_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "config_module" }
data_model_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "data_model_module" }
mongodb_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "mongodb_module" }
pymongo = "4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
