[tool.poetry]
name = "fastapi-img-process-manager"
version = "0.1.3"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
utils_module = { git = "https://github.com/parkyoungjin-888/utils_module.git" }
config_module = { git = "https://github.com/parkyoungjin-888/config_module.git" }
data_model_module = { git = "https://github.com/parkyoungjin-888/data_model_module.git" }
fastapi_module = { git = "https://github.com/parkyoungjin-888/fastapi_module.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
