[tool.poetry]
name = "grpc-collection-manager"
version = "0.1.7"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config_module = { git = "https://github.com/parkyoungjin-888/config_module.git" }
mongodb_module = { git = "https://github.com/parkyoungjin-888/mongodb_module.git" }
pymongo = "4.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
