[tool.poetry]
name = "kafka-consumer-model"
version = "0.1.0"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "config_module" }
kafka_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "kafka_module" }
onnxruntime = "^1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
