[tool.poetry]
name = "kafka-consumer-model"
version = "0.1.2"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config_module = { git = "https://github.com/parkyoungjin-888/config_module.git" }
kafka_module = { git = "https://github.com/parkyoungjin-888/kafka_module.git" }
mongodb_module = { git = "https://github.com/parkyoungjin-888/mongodb_module.git" }
onnxruntime-gpu = "^1.20.1"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
