[tool.poetry]
name = "kafka-image-consumer"
version = "0.1.2"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config_module = { git = "https://github.com/parkyoungjin-888/config_module.git" }
kafka_module = { git = "https://github.com/parkyoungjin-888/kafka_module.git" }
prometheus-client = "^0.21.1"
boto3 = "^1.37.29"
bytewax = {extras = ["kafka"], version = "^0.21.1"}
beanie = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
