[tool.poetry]
name = "redis-webcam-producer"
version = "0.1.0"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
config_module = { git = "https://github.com/parkyoungjin-888/config_module.git" }
redis_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "redis_module" }
prometheus-client = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
