[tool.poetry]
name = "redis-webcam-producer"
version = "0.1.1-beta"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
config_module = { git = "https://github.com/parkyoungjin-888/config_module.git" }
redis_module = { git = "https://github.com/parkyoungjin-888/redis_module.git" }
prometheus-client = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
