[tool.poetry]
name = "service-config-manager"
version = "0.1.0"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config_module = {path="../../common/config_module/dist/config_module-0.1.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
