[tool.poetry]
name = "service-config-manager"
version = "0.1.2"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config_module = { git = "https://github.com/parkyoungjin-888/common.git", subdirectory = "config_module" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
